Build MatchMe_2025-08-06T19-06-50.txt

Showing All Errors Only
Prepare build
Prepare packages
Build target MatchMe
SwiftEmitModule normal arm64 Emitting\ module\ for\ MatchMe (in target 'MatchMe' from project 'MatchMe')

Failed frontend command:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift-frontend -frontend -emit-module -experimental-skip-non-inlinable-function-bodies-without-types /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/AppDelegate.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/SceneDelegate.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/MainTabBarController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/DiscoverViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/MatchesViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/ChatViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/ProfileViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/OnboardingViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/ChallengeDetailViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/ChatDetailViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/EditProfileViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/FilterViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/LocationsViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Controllers/SettingsViewController.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Models/User.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Models/Challenge.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Models/Match.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Models/DataManager.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Views/UserCardView.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Views/ChatMessageCell.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Views/ChatTableViewCell.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Views/MatchTableViewCell.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Views/LocationTableViewCell.swift /Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Views/ChallengeResponseCell.swift /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/DerivedSources/GeneratedAssetSymbols.swift -target arm64-apple-ios14.0-simulator -Xllvm -aarch64-use-tbi -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator18.5.sdk -I /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Products/Debug-iphonesimulator -F /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Products/Debug-iphonesimulator -no-color-diagnostics -enable-testing -g -debug-info-format\=dwarf -dwarf-version\=4 -module-cache-path /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -swift-version 5 -enforce-exclusivity\=checked -Onone -D DEBUG -serialize-debugging-options -const-gather-protocols-file /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/Objects-normal/arm64/MatchMe_const_extract_protocols.json -enable-experimental-feature DebugDescriptionMacro -enable-bare-slash-regex -empty-abi-descriptor -validate-clang-modules-once -clang-build-session-file /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -working-directory -Xcc /Users/courtneyrowe/Documents/MatchMe -resource-dir /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift -enable-anonymous-context-mangled-names -file-compilation-dir /Users/courtneyrowe/Documents/MatchMe -Xcc -ivfsstatcache -Xcc /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphonesimulator18.5-22F76-d5fc8ad4295d2ef488fb7d0f804ce0c4.sdkstatcache -Xcc -I/Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/MatchMe-generated-files.hmap -Xcc -I/Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/MatchMe-own-target-headers.hmap -Xcc -I/Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/MatchMe-all-target-headers.hmap -Xcc -iquote -Xcc /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/MatchMe-project-headers.hmap -Xcc -I/Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Products/Debug-iphonesimulator/include -Xcc -I/Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/DerivedSources-normal/arm64 -Xcc -I/Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/DerivedSources/arm64 -Xcc -I/Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/DerivedSources -Xcc -DDEBUG\=1 -module-name MatchMe -frontend-parseable-output -disable-clang-spi -target-sdk-version 18.5 -target-sdk-name iphonesimulator18.5 -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin/swift-plugin-server -external-plugin-path /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/local/lib/swift/host/plugins\#/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin/swift-plugin-server -in-process-plugin-server-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/libSwiftInProcPluginServer.dylib -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift/host/plugins -plugin-path /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/local/lib/swift/host/plugins -emit-module-doc-path /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/Objects-normal/arm64/MatchMe.swiftdoc -emit-module-source-info-path /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/Objects-normal/arm64/MatchMe.swiftsourceinfo -emit-objc-header-path /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/Objects-normal/arm64/MatchMe-Swift.h -serialize-diagnostics-path /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/Objects-normal/arm64/MatchMe-master-emit-module.dia -emit-dependencies-path /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/Objects-normal/arm64/MatchMe-master-emit-module.d -o /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/Objects-normal/arm64/MatchMe.swiftmodule -emit-abi-descriptor-path /Users/courtneyrowe/Library/Developer/Xcode/DerivedData/MatchMe-acmriidihpmvkgewfxiyrhqmyiih/Build/Intermediates.noindex/MatchMe.build/Debug-iphonesimulator/MatchMe.build/Objects-normal/arm64/MatchMe.abi.json

EmitSwiftModule normal arm64 (in target 'MatchMe' from project 'MatchMe')
    cd /Users/courtneyrowe/Documents/MatchMe
    

/Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Models/DataManager.swift:207:1: error: cannot declare conformance to 'NSObjectProtocol' in Swift; 'DataManager' should inherit 'NSObject' instead
extension DataManager: CLLocationManagerDelegate {
^
/Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Models/DataManager.swift:207:1: note: add stubs for conformance
extension DataManager: CLLocationManagerDelegate {
^

/Users/courtneyrowe/Documents/MatchMe/MatchMe/MatchMe/Models/DataManager.swift:207:1: Cannot declare conformance to 'NSObjectProtocol' in Swift; 'DataManager' should inherit 'NSObject' instead



Activity Log Complete    8/6/25, 7:06 PM    3.4 seconds
